# tensorflowtips

./: README.md  pyproject.toml
tests/: test_tips.py
tips/tutorials/N01_Training/: make_model.py  training.py  tutorial.ipynb  tutorial.md
tips/tutorials/N02_MakeModel/: model_making_api.ipynb  model_making_api.md
tips/tutorials/N03_SaveModel/: save_and_load.ipynb  save_and_load.md  save_and_load.py
tips/tutorials/N03_SaveModel/data/models/saved_model/: keras_metadata.pb  saved_model.pb
tips/tutorials/N03_SaveModel/data/models/saved_model/variables/: variables.index
tips/tutorials/N03_SaveModel/data/weights/: ckpt.index
tips/tutorials/N04_tensorboard/: main.ipynb
